# django-ledger

./: .gitignore  .graphqlconfig  .readthedocs.yaml  .readthedocs.yml  AUTHORS.md  Contribute.md  Dockerfile  MANIFEST.in  Pipfile  README.md  README.rst  ROADMAP.md  customized_bulma.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  readme1.md  requirements-s3.txt  requirements.txt  setup.py
.devcontainer/: .devcontainer.json
.github/ISSUE_TEMPLATE/: dependabot.yml
.github/workflows/: Django.yml  pylint.yml
.space/: develop.devfile.yaml
PPT_FILES/: Observations.xlsx  Untitled.ipynb
assets/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  webpack.config.js
assets/src/: AppCharts.ts  DjangoLedgerApp.ts  DjetlerApp.ts  djetler.css  djetler.css.map  djetler.scss  djetler.ts  djetler_styles.css  djetler_styles.less  djl_styles.scss  entry.ts  global.d.ts  styles.js
dev_env/: asgi.py  settings.py  urls.py  wsgi.py
django-ledger/: admin.py  apps.py  urls.py  views.py
django-ledger/migrations/: 0001_initial.py
django-ledger/models/: __init__.py  accounts.py  coa.py  coa_accounts.py  entity.py  journalentry.py  ledger.py  subject.py  transactions.py  utils.py
django_ledger/: AUTHORS.md  ROADMAP.md  __init__.py  admin.py  apps.py  context.py  exceptions.py  forms.py  settings.py  urls.py  utils.py  views.py
django_ledger/abstracts/: __init__.py  accounts.py  bank_account.py  bill.py  coa.py  entity.py  invoice.py  journal_entry.py  ledger.py  staging.py  transactions.py
django_ledger/admin/: __init__.py  chart_of_accounts.py  coa.py  enterprise.py  entity.py  ledger.py
django_ledger/examples/: __init__.py  quickstart.py
django_ledger/forms/: __init__.py  account.py  app_filters.py  auth.py  bank_account.py  bill.py  chart_of_accounts.py  closing_entry.py  coa.py  customer.py  customer_estimate.py  customer_job.py  data_import.py  entity.py  estimate.py  feedback.py  invoice.py  item.py  journal_entry.py  ledger.py  purchase_order.py  transactions.py  unit.py  utils.py  vendor.py
django_ledger/io/: __init__.py  data_generator.py  financial_statements.py  io_context.py  io_core.py  io_digest.py  io_generator.py  io_library.py  io_middleware.py  io_mixin.py  mixin.py  ofx.py  ratios.py  roles.py  tx_handler.py
django_ledger/migrations/: 0001_initial.py  0002_alter_entitymodel_default_coa.py  0002_alter_entitymodel_name.py  0002_alter_entityunitmodel_unique_together.py  0002_alter_itemthroughmodel_po_model.py  0002_alter_journalentrymodel_managers_and_more.py  0002_auto_20200130_0118.py  0002_auto_20200709_0220.py  0002_auto_20201010_1741.py  0002_auto_20210911_2334.py  0002_bankaccountmodel_swift_number_and_more.py  0002_entitymodel_accrual_method_alter_accountmodel_role_and_more.py  0002_entitymodel_fy_start_month.py  0002_remove_purchaseordermodel_po_date.py  0003_alter_customermodel_unique_together_and_more.py  0003_alter_journalentrymodel_activity.py  0003_auto_20200131_0100.py  0003_auto_20200709_1922.py  0003_auto_20201201_0824.py  0003_auto_20201201_2146.py  0003_auto_20210526_1902.py  0003_auto_20211004_0752.py  0003_auto_20211004_2143.py  0003_remove_accountmodel_django_ledg_role_1bff96_idx_and_more.py  0004_alter_accountmodel_role.py  0004_auto_20201218_1150.py  0004_auto_20211005_2101.py  0004_purchaseordermodel_vendor.py  0004_remove_itemmodel_depth_remove_itemmodel_numchild_and_more.py  0005_alter_purchaseordermodel_po_title.py  0005_auto_20201228_1720.py  0005_auto_20201230_1125.py  0005_auto_20201230_1201.py  0005_auto_20210111_2030.py  0005_auto_20210114_2130.py  0005_itemmodel_item_role.py  0005_itemmodel_item_role_and_more.py  0005_remove_itemmodel_django_ledg_invento_dbf206_idx_and_more.py  0006_alter_journalentrymodel_je_number.py  0006_alter_journalentrymodel_je_number_and_more.py  (+71 more)
django_ledger/model_base/: accounts.py  coa.py  entity.py  journal_entry.py  ledger.py
django_ledger/models/: __init__.py  accounts.py  bank.py  bank_account.py  bill.py  chart_of_accounts.py  closing_entry.py  coa.py  coa_default.py  customer.py  customer_estimate.py  customer_job.py  data_import.py  data_import_jobs.py  deprecations.py  enterprise.py  entity.py  estimate.py  invoice.py  items.py  journal_entry.py  journalentry.py  ledger.py  mixins.py  purchase_order.py  receipt.py  signals.py  subject.py  transactions.py  unit.py  utils.py  vendor.py
django_ledger/models_abstracts/: __init__.py  account_roles.py  accounts.py  coa.py  entity.py  journal_entry.py  ledger.py  transactions.py
django_ledger/regional/: __init__.py  base.py  dispatch.py  registry.py  roles.py  us_fallback.py
django_ledger/report/: balance_sheet.py  cash_flow_statement.py  core.py  enterprise.py  income_statement.py  pdf_core.py
django_ledger/services/: __init__.py  enterprise.py
django_ledger/templatetags/: __init__.py  django_ledger.py
django_ledger/tests/: base.py  test_accounts.py  test_auth.py  test_bill.py  test_chart_of_accounts.py  test_closing_entry.py  test_coa_default.py  test_enterprise_accounting.py  test_entity.py  test_entity_permissions.py  test_funds.py  test_io.py  test_journal_entry.py  test_purchase_order.py  test_transactions.py  tests_entity.py
django_ledger/urls/: __init__.py  account.py  api.py  auth.py  bank_account.py  bill.py  (+23 more)
django_ledger_countries/: __init__.py  apps.py  registry.py  settings.py  signals.py
django_ledger_extensions/: __init__.py  admin.py  apps.py  bank_matching.py  documents.py  health_check.py  models.py  payments.py  settings.py  signals.py  steuerberater_export.py  storage.py
djangoledger_api/: api.py  apps.py
docs/: Makefile  requirements.txt
notebooks/: DjangoCon2024.ipynb  QuickStart Notebook.ipynb  QuickStart.ipynb
tests/: asgi.py  base.py  manage.py  settings.py  test_auth.py  tests_entity.py  wsgi.py
(+625 files in other folders)
