[project]
name = "django-ledger"
version = "0.6.0"
readme = "README.md"
requires-python = ">=3.10"
description = "Double entry accounting system built on the Django Web Framework."
keywords = ["django", "finance", "bookkeeping", "accounting", "balance sheet", "income statement", "general ledger", "money", "engine"]
authors = [
    { name = "Miguel Sanda", email = "msanda@arrobalytics.com" }
]
maintainers = [
    { name = "Miguel Sanda", email = "msanda@arrobalytics.com" }
]
dependencies = [
    "asgiref==3.8.1; python_version >= '3.8'",
    "django>=2.2; python_version >= '3.10'",
    "django-treebeard>=4.7.1; python_version >= '3.8'",
    "faker>=24.11.0; python_version >= '3.8'",
    "markdown>=3.6; python_version >= '3.8'",
    "ofxtools==0.9.5; python_version >= '3.8'",
    "pillow>=10.3.0; python_version >= '3.8'",
    "python-dateutil==2.9.0.post0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'",
    "six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'",
    "sqlparse>=0.5.0; python_version >= '3.8'",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Framework :: Django :: 4.0",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]

[project.urls]
"Homepage" = "https://www.djangoledger.com"
"Bug Tracker" = "https://github.com/arrobalytics/django-ledger/issues"
"Documentation" = "https://django-ledger.readthedocs.io/en/latest/"
"Source Code" = "https://github.com/arrobalytics/django-ledger"

[project.license]
text = "GPLv3 License"

[project.optional-dependencies]
dev = ["sphinx~=4.5.0", "behave~=1.2.6", "pipenv-setup", "pylint", "furo"]
